Individual files for alt text

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -41,16 +41,12 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
-    "import sys\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
-    "from uuid import UUID\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -88,13 +84,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "included-pride",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "tq = scaffolding.get_time_query(year, month)\n",
     "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
     "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)\n",
+    "# Can be set to 2 after \"replaced mode\" responses are removed from previously collected study data?\n",
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
     "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
    ]
   },
@@ -184,7 +183,7 @@
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct['Mode_confirm'].value_counts(dropna=True))"
    ]
   },
@@ -202,7 +201,7 @@
     "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_commute_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -228,7 +227,7 @@
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "print(expanded_ct['Trip_purpose'].value_counts(dropna=True))"
    ]
   },
@@ -254,7 +253,7 @@
     "plot_title=\"Mode confirmations for trips under 10 Miles\\n%s\" % quality_text\n",
     "file_name ='ntrips_under10miles_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -293,7 +292,7 @@
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name ='miles_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(miles)"
    ]
   },
@@ -320,7 +319,7 @@
     "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
    ]
   },
   {
@@ -339,7 +338,7 @@
     "file_name ='average_miles_mode_confirm2%s.png' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
    ]
   },
   {
@@ -369,7 +368,7 @@
     "file_name ='ntrips_per_day%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)"
    ]
   },
   {
@@ -401,7 +400,7 @@
     "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)"
    ]
   }
  ],
