--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -29,7 +29,7 @@
     "month = 9\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"Pilot ebike\""
+    "mode_of_interest = \"E-bike\""
    ]
   },
   {
@@ -41,16 +41,12 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
-    "import sys\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
-    "from uuid import UUID\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -106,7 +102,7 @@
     "tq = scaffolding.get_time_query(year, month)\n",
     "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
     "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)\n",
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
     "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
    ]
   },
@@ -186,7 +182,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "liked-shade",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Note: The portion of pilot ebikes in the pie chart below is only when the mode_confirm is different that ebike. Example: mode_confirm was Walk, replaced_mode ebike.\n",
@@ -196,7 +194,7 @@
     "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title)"
    ]
   },
   {
@@ -221,7 +219,7 @@
     "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
     "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
    ]
   },
   {
@@ -236,7 +234,7 @@
     "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
     "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
    ]
   },
   {
@@ -270,7 +268,7 @@
     "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
     "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(dg)"
    ]
   },
@@ -297,7 +295,7 @@
     "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
     "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
    ]
   },
   {
@@ -316,7 +314,7 @@
     "file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
    ]
   },
   {
@@ -346,7 +344,7 @@
     "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
    ]
   },
   {
@@ -378,7 +376,7 @@
     "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
    ]
   }
  ],
