--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -26,7 +26,7 @@
     "month = 9\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"Pilot ebike\""
+    "mode_of_interest = \"E-bike\""
    ]
   },
   {
@@ -37,16 +37,12 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
-    "import sys\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
-    "from uuid import UUID\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -92,13 +88,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "tq = scaffolding.get_time_query(year, month)\n",
     "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
     "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)\n",
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
     "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
    ]
   },
@@ -158,22 +156,7 @@
     "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
     "data.user_id = pd.Categorical(data.user_id)\n",
     "data.date_time = pd.Categorical(data.date_time)\n",
-    "data.Mode_confirm = pd.Categorical(data.Mode_confirm,\n",
-    "                                   ordered=True,\n",
-    "                                   categories=['Car, drove alone',\n",
-    "                                              'Car, with others',\n",
-    "                                              'Taxi/Uber/Lyft',\n",
-    "                                              'Bus',\n",
-    "                                              'Free Shuttle',\n",
-    "                                              'Train',\n",
-    "                                              'Bikeshare',\n",
-    "                                              'Pilot ebike',\n",
-    "                                              'Regular Bike',\n",
-    "                                              'Scooter share',\n",
-    "                                              'Skate board',\n",
-    "                                              'Walk',\n",
-    "                                              'Other',\n",
-    "                                              'Not a Trip'])\n",
+    "data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "\n",
     "data.head()"
    ]
@@ -244,7 +227,7 @@
     "ylab = 'Trip Count'\n",
     "file_name = \"ts_ebike_share%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -268,7 +251,7 @@
     "ylab = 'Miles'\n",
     "file_name = \"ts_ebike_miles%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -294,7 +277,7 @@
     "ylab = 'miles/user'\n",
     "file_name = \"ts_ebike_miles_user%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -321,7 +304,7 @@
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_miles_proportion%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -348,7 +331,7 @@
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trips_proportion%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
   {
@@ -382,7 +365,7 @@
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trip_individual_variation%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['bike_trip_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
   {
@@ -416,7 +399,7 @@
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_mile_individual_variation%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['bike_miles_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
   }
  ],
