--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -29,7 +29,7 @@
     "month = 9\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"Pilot ebike\""
+    "mode_of_interest = \"E-bike\""
    ]
   },
   {
@@ -41,16 +41,12 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
-    "import sys\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
-    "from uuid import UUID\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -106,7 +102,7 @@
     "tq = scaffolding.get_time_query(year, month)\n",
     "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
     "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)\n",
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
     "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
    ]
   },
@@ -221,7 +217,7 @@
     "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
     "file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
     "overeall_energy_impact(x,y,color,df,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title)"
    ]
   },
   {
@@ -248,7 +244,7 @@
     "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title)"
    ]
   },
   {
@@ -283,7 +279,7 @@
     "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
     "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   },
   {
@@ -317,7 +313,7 @@
     "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
     "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   },
   {
@@ -349,7 +345,7 @@
     "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
     "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   }
  ],
