--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -37,16 +37,12 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
-    "import sys\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
-    "from uuid import UUID\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -81,13 +77,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "tq = scaffolding.get_time_query(year, month)\n",
     "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
     "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)\n",
+    "# Can be set to 2 after \"replaced mode\" responses are removed from previously collected study data?\n",
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
     "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
    ]
   },
@@ -147,22 +146,7 @@
     "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
     "data.user_id = pd.Categorical(data.user_id)\n",
     "data.date_time = pd.Categorical(data.date_time)\n",
-    "data.Mode_confirm = pd.Categorical(data.Mode_confirm,\n",
-    "                                   ordered=True,\n",
-    "                                   categories=['Car, drove alone',\n",
-    "                                              'Car, with others',\n",
-    "                                              'Taxi/Uber/Lyft',\n",
-    "                                              'Bus',\n",
-    "                                              'Free Shuttle',\n",
-    "                                              'Train',\n",
-    "                                              'Bikeshare',\n",
-    "                                              'Pilot ebike',\n",
-    "                                              'Regular Bike',\n",
-    "                                              'Scooter share',\n",
-    "                                              'Skate board',\n",
-    "                                              'Walk',\n",
-    "                                              'Other',\n",
-    "                                              'Not a Trip'])\n",
+    "data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "\n",
     "data.head()"
    ]
@@ -234,7 +218,7 @@
     "ylab = 'Emissions (lb CO2/day/user)'\n",
     "file_name = \"ts_emissions_user%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -259,7 +243,7 @@
     "ylab = 'Energy (kWH/day/user)'\n",
     "file_name = \"ts_energy_user%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -285,7 +269,7 @@
     "ylab = 'Emissions (lb CO2/mile/day)'\n",
     "file_name = \"ts_emissions_vmt%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -308,7 +292,7 @@
     "ylab = 'Unique IDs'\n",
     "file_name = \"ts_users%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['active_users'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -359,7 +343,7 @@
     "legend_title = 'Confirmed Mode'\n",
     "file_name = \"ts_all_modes%s.png\"%file_suffix\n",
     "timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_generic('multivariate timeseries', file_name, plot_title, './alt_text_lookup.json')"
+    "alt_text = scaffolding.store_alt_text_generic('multivariate timeseries', file_name, plot_title)"
    ]
   }
  ],
