Remove hard coded labels, revert imports, program configs

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -223,7 +223,7 @@
     "plot_data = mode_counts[mode_counts['Mode_confirm']==mode_of_interest]\n",
     "plot_data = plot_data.groupby(['date_time'])['trip_count_smooth'].agg(['sum']).reset_index()\n",
     "\n",
-    "plot_title = 'Daily E-Bike Trips\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Trips\\n%s'%quality_text\n",
     "ylab = 'Trip Count'\n",
     "file_name = \"ts_ebike_share%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
@@ -247,7 +247,7 @@
     "plot_data = data[data['Mode_confirm']==mode_of_interest]\n",
     "plot_data = plot_data.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
     "\n",
-    "plot_title = 'Daily E-Bike Mileage\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Mileage\\n%s'%quality_text\n",
     "ylab = 'Miles'\n",
     "file_name = \"ts_ebike_miles%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
@@ -273,7 +273,7 @@
     "plot_data = plot_data.merge(active_users, on='date_time')\n",
     "plot_data['mileage_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
-    "plot_title = 'Daily E-Bike Mileage per Active User\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Mileage per Active User\\n%s'%quality_text\n",
     "ylab = 'miles/user'\n",
     "file_name = \"ts_ebike_miles_user%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
@@ -300,7 +300,7 @@
     "plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
     "plot_data['miles_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
     "\n",
-    "plot_title = 'Daily Ebike Mileage Proportion (All Users, excluding air)\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Mileage Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_miles_proportion%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
@@ -327,7 +327,7 @@
     "plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
     "plot_data = plot_data[plot_data['Mode_confirm']==mode_of_interest]\n",
     "\n",
-    "plot_title = 'Daily E-Bike Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trips_proportion%s.png\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
@@ -359,12 +359,12 @@
     "plot_data_ebike = plot_data[plot_data.Mode_confirm == mode_of_interest].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
     "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
     "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
-    "plot_data['bike_trip_proportion'] = plot_data['trip_count_smooth_y'] / plot_data['trip_count_smooth_x']\n",
+    "plot_data['mode_trip_proportion'] = plot_data['trip_count_smooth_y'] / plot_data['trip_count_smooth_x']\n",
     "\n",
-    "plot_title = 'Daily Ebike Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trip_individual_variation%s.png\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['bike_trip_proportion'], plot_title, ylab, file_name)\n",
+    "timeseries_plot(plot_data['date_time'], plot_data['mode_trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
@@ -390,15 +390,15 @@
     "# but this still doesn't tell us which users have dropped their ridership\n",
     "\n",
     "plot_data = mode_distance\n",
-    "plot_data_ebike = plot_data[plot_data.Mode_confirm == mode_of_interest].groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
+    "plot_data_mode = plot_data[plot_data.Mode_confirm == mode_of_interest].groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
     "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
-    "plot_data['bike_miles_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
+    "plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
+    "plot_data['mode_miles_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
     "\n",
-    "plot_title = 'Daily Ebike Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
+    "plot_title = f'Daily {mode_of_interest} Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_mile_individual_variation%s.png\"%file_suffix\n",
-    "timeseries_plot(plot_data['date_time'], plot_data['bike_miles_proportion'], plot_title, ylab, file_name)\n",
+    "timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
   }
