Viz notebook pipeline function

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -83,54 +83,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "included-pride",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "tq = scaffolding.get_time_query(year, month)\n",
-    "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)\n",
-    "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)\n",
-    "# Can be set to 2 after \"replaced mode\" responses are removed from previously collected study data?\n",
-    "expanded_ct = scaffolding.expand_userinputs(labeled_ct, 3)\n",
-    "expanded_ct = scaffolding.data_quality_check(expanded_ct)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "removed-retailer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mapping new labels with dictionaries\n",
-    "expanded_ct['Trip_purpose']= expanded_ct['purpose_confirm'].map(dic_pur)\n",
-    "expanded_ct['Mode_confirm']= expanded_ct['mode_confirm'].map(dic_re)\n",
-    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)\n",
-    "\n",
-    "# Mapping fuel\n",
-    "expanded_ct['Mode_confirm_fuel']= expanded_ct['Mode_confirm'].map(dic_fuel)\n",
-    "expanded_ct['Replaced_mode_fuel']= expanded_ct['Replaced_mode'].map(dic_fuel)\n",
-    "\n",
-    "# Change meters to miles\n",
-    "scaffolding.unit_conversions(expanded_ct)\n",
-    "\n",
-    "# Calculate energy impact\n",
-    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_ei, 'distance_miles', 'Replaced_mode', 'Mode_confirm')\n",
-    "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles', 'Replaced_mode', 'Mode_confirm')\n",
-    "expanded_ct = scaffolding.CO2_impact_lb(expanded_ct, 'distance_miles', 'Replaced_mode', 'Mode_confirm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "organic-pitch",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_suffix = scaffolding.get_file_suffix(year, month, program)\n",
-    "quality_text = scaffolding.get_quality_text(participant_ct_df, expanded_ct)"
+    "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
+    "                                                                            month,\n",
+    "                                                                            program,\n",
+    "                                                                            df_ei,\n",
+    "                                                                            dic_re,\n",
+    "                                                                            dic_pur,\n",
+    "                                                                            dic_fuel)"
    ]
   },
   {
@@ -158,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text_mode = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
+    "quality_text_mode = scaffolding.get_quality_text(expanded_ct, data_eb)"
    ]
   },
   {
